# Colores-VST

./: .gitignore  CMakeLists.txt
resource/: coloreseditor.uidesc  editor.uidesc
source/: cids.h  colorescids.h  colorescontroller.cpp  colorescontroller.h  coloresentry.cpp  coloresprocessor.cpp  coloresprocessor.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
